[package]
name = "world_gen"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[[bin]]
name = "world_gen"
path = "bin/world_gen.rs"

[[bin]]
name = "heightmap_generator"
path = "bin/heightmap_generator.rs"

[[bin]]
name = "erosion_viz"
path = "bin/erosion_viz.rs"
required-features = ["feat-ncurses"]


[features]
feat-ncurses = ["ncurses"]

[dependencies]
core = { path = "./core" }
world = { path = "./world" }

gl = "0.11"
glutin = "0.19"
glm = "0.2"
log = "0.4"
env_logger = "0.6"
chrono = "0.4"
rand = "0.6"
num-traits = "0.2"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
byteorder = "1.3"
ncurses = { version = "5.99", optional = true }
