[package]
name = "world_gen"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[[bin]]
name = "world_gen"
path = "bin/world_gen.rs"

[dependencies]
core = { path = "./core" }
world = { path = "./world" }

gl = "^0.14.0"
glutin = "^0.26.0"
glm = "^0.2.3"
log = "^0.4.14"
env_logger = "^0.8.3"
thiserror = "^1.0.24"
chrono = "^0.4.19"
rand = "^0.8.3"
num-traits = "^0.2.14"
lazy_static = "^1.4.0"
serde = { version = "^1.0.124", features = ["derive"] }
serde_yaml = "^0.8.17"
byteorder = "^1.4.2"
