[package]
name = "application"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[dependencies]
world_gen = { path = "../world_gen" }
graphics = { path = "../graphics" }
utility = { path = "../utility" }

gl = "0.11"
glutin = "0.19"
glm = "0.2"
log = "0.4"
env_logger = "0.6"
chrono = "0.4"
