[package]
name = "core"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[lib]
name = "core"
path = "./src/lib.rs"

[dependencies]

gl = "0.11"
glutin = "0.19"
glm = "0.2"
log = "0.4"
image = "0.22.3"
env_logger = "0.6"
chrono = "0.4"
rand = "0.6"
num-traits = "0.2"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
palette = "0.5"
