[package]
name = "core"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[lib]
name = "core"
path = "./src/lib.rs"

[dependencies]

gl = "^0.14.0"
glutin = "^0.26.0"
glm = "^0.2.3"
log = "^0.4.14"
thiserror = "^1.0.24"
image = "^0.23.14"
env_logger = "^0.8.3"
chrono = "^0.4.19"
rand = "^0.8.3"
num-traits = "^0.2.14"
lazy_static = "^1.4.0"
serde = { version = "^1.0.124", features = ["derive"] }
serde_yaml = "^0.8.17"
palette = "^0.5.0"
