[package]
name = "world"
version = "0.1.0"
authors = ["Jakob <jakobfischer93@gmail.com>"]
edition = "2018"

[lib]
name = "world"
path = "./src/lib.rs"

[dependencies]
core = { path = "../core" }

gl = "0.11"
glm = "0.2"
log = "0.4"
env_logger = "0.6"
chrono = "0.4"
rand = "0.6"
num-traits = "0.2"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bytes = "0.5"
byteorder = "1.3"
